spacing issues - fixed!

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3153,7 +3153,7 @@ input, select, textarea {
 /* Main */
 
 	#main {
-		padding: 0em 0 6em 0 ;
+		padding: 2em 0 0em 0 ;
 	}
 
 		@media screen and (max-width: 736px) {
